# app/Http/Controllers/CartController.php
@@ -4,25 +4,49 @@ namespace App\Http\Controllers;
 
 use App\Models\Cart;
 use App\Models\Product;
+use Illuminate\Database\Eloquent\Collection;
 use Illuminate\Http\Request;
+use Illuminate\Http\Response;
 use Illuminate\Support\Facades\Auth;
 
 class CartController extends Controller
 {
     /**
+     *
+     * @OA\Get(
+     *     path="/carts",
+     *     operationId="allCarts",
+     *     tags={"Cart"},
+     *     summary="Get carts information",
+     *     description="Returns carts data by id",
+     *     security={{"bearerAuth":{}}},
+     *     @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *       ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      )
+     *     )
+     *
      * Display a listing of the resource.
      *
-     * @return \Illuminate\Http\Response
+     * @return Cart[]|Collection|Response
      */
     public function index()
     {
-        //
+        return Cart::all();
     }
 
     /**
      * Show the form for creating a new resource.
      *
-     * @return \Illuminate\Http\Response
+     * @return Response
      */
     public function create()
     {
@@ -33,7 +57,7 @@ class CartController extends Controller
      * Store a newly created resource in storage.
      *
      * @param \Illuminate\Http\Request $request
-     * @return \Illuminate\Http\Response
+     * @return Response
      */
     public function store(Request $request)
     {
@@ -41,21 +65,44 @@ class CartController extends Controller
     }
 
     /**
+     *
+     * @OA\Get(
+     *     path="/cart",
+     *     operationId="userCart",
+     *     tags={"Cart"},
+     *     summary="Get user cart information",
+     *     description="Returns user cart data",
+     *     security={{"bearerAuth":{}}},
+     *     @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *       ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      )
+     *     )
+     *
      * Display the specified resource.
      *
      * @param \App\Models\Cart $cart
-     * @return \Illuminate\Http\Response
+     * @return Response
      */
     public function show(Cart $cart)
     {
-        //
+        $userId = auth('sanctum')->user()->getKey();
+        return Cart::where('user_id', $userId)->first();
     }
 
     /**
      * Show the form for editing the specified resource.
      *
      * @param \App\Models\Cart $cart
-     * @return \Illuminate\Http\Response
+     * @return Response
      */
     public function edit(Cart $cart)
     {
@@ -67,7 +114,7 @@ class CartController extends Controller
      *
      * @param \Illuminate\Http\Request $request
      * @param \App\Models\Cart $cart
-     * @return \Illuminate\Http\Response
+     * @return Response
      */
     public function update(Request $request, Cart $cart)
     {
@@ -78,7 +125,7 @@ class CartController extends Controller
      * Remove the specified resource from storage.
      *
      * @param \App\Models\Cart $cart
-     * @return \Illuminate\Http\Response
+     * @return Response
      */
     public function destroy(Cart $cart)
     {
@@ -86,6 +133,38 @@ class CartController extends Controller
     }
 
     /**
+     *
+     * @OA\Post(
+     *      path="/cart/add_product",
+     *      operationId="addProduct",
+     *      tags={"Cart"},
+     *      summary="Add product to cart",
+     *      description="Add product to cart",
+     *      @OA\RequestBody(
+     *          required=true,
+     *          description="Input product information",
+     *          @OA\JsonContent(
+     *          type="object",
+     *          required={"product_id","quantity"},
+     *          @OA\Property(property="product_id", type="integer" , example="1"),
+     *          @OA\Property(property="quantity", type="integer" , example="1")
+     *    ),
+     *      ),
+     *      @OA\Response(
+     *          response=201,
+     *          description="Successful operation",
+     *     @OA\JsonContent()
+     *       ),
+     *      @OA\Response(
+     *          response=400,
+     *          description="Bad Request"
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      )
+     * )
+     *
      * @param Request $request
      */
     public function addProducts(Request $request)
